# openwrt-lvgl-fb

./: .gitmodules  CMakeLists.txt  Readme.md  lv_conf.h  user_cross_compile_setup.cmake
src/: main.c
src/lib/cJSON/: CMakeLists.txt
src/lib/mtk-userspace-spi/: CMakeLists.txt  mtk-spi.c  mtk-spi.h
